--- a/DoctorsUnite/templates/base.html
+++ b/DoctorsUnite/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital Management System</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{% static 'styles.css'%}">
 </head>
 <body>
     <!-- Navbar Section -->
